feat: fix stories and remove padding desktop

--- a/src/components/z-app-header/styles.css
+++ b/src/components/z-app-header/styles.css
@@ -330,7 +330,7 @@ z-offcanvas[open] .drawer-content ::slotted(z-menu) {
 
   .heading-panel {
     align-items: center;
-    padding: calc(var(--space-unit) * 1.5) var(--grid-margin) calc(var(--space-unit) * 1.25);
+    padding: calc(var(--space-unit) * 1.5) var(--grid-margin) 0;
   }
 
   :host(:not([enable-search="false"])[search-page-url]) .heading-panel .heading-container {
