--- a/src/components/z-tag/styles.css
+++ b/src/components/z-tag/styles.css
@@ -31,6 +31,10 @@
   transition: margin-right 0.3s ease-out 0s;
 }
 
+:host > z-icon:has(+ div:empty) {
+  margin-right: 0;
+}
+
 :host(.expandable) > div {
   overflow: hidden;
   max-width: 0;
