fix: fix and improve z-searchbar accessibility

--- a/src/components/z-searchbar/styles.css
+++ b/src/components/z-searchbar/styles.css
@@ -140,6 +140,11 @@ z-list > div.children-node {
   cursor: pointer;
 }
 
+.results z-list-element > .list-element:focus-visible {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
+
 .results z-list-element > .list-element .item.ellipsis {
   overflow: hidden;
 }
