chore: add focus to zth

--- a/src/components/table/cells/z-th/styles.css
+++ b/src/components/table/cells/z-th/styles.css
@@ -28,3 +28,8 @@
   background-color: transparent;
   cursor: pointer;
 }
+
+:host(:focus) {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
