chore: fix z-table sizes

--- a/src/components/table/cells/z-table-cells.css
+++ b/src/components/table/cells/z-table-cells.css
@@ -1,7 +1,7 @@
 :host {
   position: relative;
   display: flex;
-  min-width: 128px;
+  max-width: 100%;
   box-sizing: border-box;
   align-items: center;
   padding: var(--z-table--cells-padding, calc(var(--space-unit) * 2));
