--- a/src/components/z-menu/styles.css
+++ b/src/components/z-menu/styles.css
@@ -25,6 +25,7 @@
 }
 
 .menu-label {
+  position: relative;
   width: 100%;
   padding: 0;
   border: 0;
@@ -52,8 +53,8 @@ button.menu-label {
 .menu-label .menu-label-content {
   position: relative;
   display: flex;
-  height: 30px;
   align-items: center;
+  border-bottom: var(--border-size-large) solid transparent;
 }
 
 :host(:is([active], [open])) .menu-label-content,
@@ -73,28 +74,32 @@ button.menu-label {
   box-shadow: none !important;
 }
 
-/* border */
-:host(:is([active], [open], [vertical-context])) .menu-label .menu-label-content::after,
-.menu-label .menu-label-content:hover::after,
-.menu-label:focus-within .menu-label-content::after {
+:host([vertical-context]) .menu-label-content {
+  padding: var(--space-unit) 0;
+  border-width: var(--border-size-small);
+  border-color: var(--color-surface03);
+}
+
+:host([vertical-context]) .menu-label-content ::slotted(*) {
+  padding: 0;
+}
+
+:host(:is([active], [open])) .menu-label .menu-label-content,
+.menu-label .menu-label-content:hover,
+.menu-label:focus-within .menu-label-content {
+  border-color: var(--color-secondary01);
+}
+
+:host([vertical-context]:is([active], [open])) .menu-label .menu-label-content::after,
+:host([vertical-context]) .menu-label:hover::after,
+:host([vertical-context]) .menu-label:focus-within .menu-label-content::after {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  content: "";
-  pointer-events: none;
-}
-
-:host([vertical-context]) .menu-label-content::after {
-  height: var(--border-size-small);
-  background-color: var(--color-surface03);
-}
-
-:host(:is([active], [open])) .menu-label .menu-label-content::after,
-.menu-label .menu-label-content:hover::after,
-.menu-label:focus-within .menu-label-content::after {
   height: var(--border-size-large);
   background-color: var(--color-secondary01);
+  content: "";
 }
 
 /* Prevents layout shifts on font-weight changes.
@@ -103,7 +108,7 @@ so the needed space is correctly calculated before any hover/active state change
 font-weight of the real text.
 The hidden text has an height of 0px so it can expand the width without changing the height
 when placed below the real text using `flex-direction: column`. */
-::slotted([data-text])::after {
+::slotted([data-text]:not([slot]))::after {
   height: 0;
   content: attr(data-text);
   content: attr(data-text) / "";
@@ -115,12 +120,12 @@ when placed below the real text using `flex-direction: column`. */
 }
 
 @media speech {
-  ::slotted([data-text])::after {
+  ::slotted([data-text]:not([slot]))::after {
     display: none;
   }
 }
 
-::slotted([data-text]) {
+::slotted([data-text]:not([slot])) {
   display: inline-flex;
   flex-direction: column;
 }
@@ -129,12 +134,14 @@ when placed below the real text using `flex-direction: column`. */
   display: inline-flex;
   width: 100%;
   min-width: fit-content;
+  padding-bottom: 2px;
   margin: 0;
   appearance: none;
   color: var(--z-menu-label-color);
   font-family: var(--font-family-sans);
   font-size: var(--font-size-3);
   font-weight: inherit;
+  line-height: 1.5;
 }
 
 .menu-label .menu-label-content z-icon {
@@ -157,7 +164,7 @@ when placed below the real text using `flex-direction: column`. */
   width: 375px;
   min-width: 100%;
   max-width: 100vw;
-  padding: var(--space-unit) var(--space-unit) calc(var(--space-unit) * 2);
+  padding: 0 calc(var(--space-unit) * 2);
   box-shadow: var(--shadow-2);
 }
 
@@ -196,7 +203,7 @@ when placed below the real text using `flex-direction: column`. */
   width: 100%;
   margin: 0;
   font-size: var(--font-size-3);
-  line-height: 1.25;
+  line-height: 1.5;
 }
 
 .items > ::slotted([slot="item"]:focus:focus-visible) {
@@ -204,8 +211,12 @@ when placed below the real text using `flex-direction: column`. */
 }
 
 .items > ::slotted([slot="item"]:not(z-menu-section)) {
-  padding: calc(var(--space-unit) * 2) calc(var(--space-unit) * 0.5);
-  border-bottom: var(--border-size-small) solid var(--color-surface05);
+  padding: var(--space-unit) 0;
+  border-bottom: var(--border-size-small) solid var(--color-surface03);
+}
+
+:host(:not([vertical-context])) .items > ::slotted([slot="item"]:not(z-menu-section):last-of-type) {
+  border-bottom: 0;
 }
 
 .items > ::slotted([slot="item"]:hover),
