--- a/src/components/table/cells/z-table-cells.css
+++ b/src/components/table/cells/z-table-cells.css
@@ -17,21 +17,11 @@
   box-shadow: 8px 0 16px -8px var(--shadow-color-base);
 }
 
-/* Leave the space for the menu button */
-:host([show-menu])::after {
-  display: inline-block;
+.cell--content-container {
+  width: 100%;
   height: 100%;
-  margin-right: calc(var(--space-unit) * 4);
-  background: transparent;
-  content: "";
-  user-select: none;
-}
-
-.cell--menu-container {
-  position: absolute;
-  z-index: 1;
-  top: var(--space-unit);
-  right: var(--space-unit);
+  display: flex;
+  align-items: center;
 }
 
 :host(:not([show-menu])) .cell--menu-container {
